2003-03-19  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (env): Use 'ps -el' rather than 'ps -l' so that
	crontab jobs that might be running these tests without a
	controlling terminal work properly.

	* client.c (start_rsh_server): Use new definition of RSH_DFLT to
	allow "rsh" to be configured to default to "ssh" or some other
	local remote transport program.

	* Makefile.in: Regenerated.

2003-03-19  Larry Jones  <lawrence.jones@eds.com>

	* filesubr.c (mkdir_if_needed): Save errno since isdir() can clobber.
	(Patch from Brian Poole <raj@cerias.purdue.edu>.)
	* sanity.sh (abspath-4): Update to match.

	* filesubr.c (locate_rcs): Fix gcc warning.

2003-03-19  Derek Price  <derek@ximbiot.com>

	* add.c (add_directory): Only call WriteTemplate when the server is
	active.
	* create_adm.c (Create_Admin): Don't call WriteTemplate here since
	Create_Admin is only called from the client.
	* commit.c (commit_dirleaveproc): Don't call WriteTemplate here.  I'm
	a little confused as to why since update_direntproc works for update.c,
	but I can't come up with a test case that fails when this call is
	missing.  Nor can I come up with a test case that passes when this call
	is present and the one in commit_filesdoneproc is removed.
	* sanity.sh (template): Tidy, minimize, and add some extra tests.

2003-03-19  Mark D. Baushke  <mdb@cvshome.org>

	* .cvsignore: Added sanity.config.sh, a new auto-generated file.

	* cvs.h (CVS_PID_ENV): New environment variable CVS_PID has the
	pid of the parent cvs process.
	* main.c (main): Initialize it.
	* sanity.sh (env): Test it.
 
2003-03-19  Derek Price  <derek@ximbiot.com>

	* sanity.config.sh.in: New file.
	* sanity.sh: Source new config file when available.  Accept alternate
	config file as an argument to a -c option.  Accept long options with
	arguments.
	(getlongoptarg): New function.

	* Makefile.in: Regenerated.

2003-03-18  Derek Price  <derek@ximbiot.com>

	* root.c (parse_root): Add some more comments and expand